Practice/practice1/sol.file/apache-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: apache-svc
spec:
  type: ClusterIP
  selector:
    app: apache-rs
  ports:
  - port: 8080
    targetPort: apache
    protocol: TCP
