Practice/practice1/sol.file/lb.yml
apiVersion: v1
kind: Service
metadata: 
  name: apache-lb
spec:
  type: LoadBalancer
  selector:
    app: apache-rs
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
