Practice/practice1/sol.file/nginx-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: nginx
  selector: 
    app: nginx-rs
