Practice/practice1/sol.file/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: web1.ingress.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apache-svc
          servicePort: 8080
  - host: web2.ingress.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 8090
